[learn-laravel-v7] 04. Basic setup for connecting db build in docker compose b01

--- a/testCreateLarInPhpV7/test-cre-laravel-in-php-v7-b01/.env
+++ b/testCreateLarInPhpV7/test-cre-laravel-in-php-v7-b01/.env
@@ -8,10 +8,10 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_PORT=3329
+DB_DATABASE=test_learn_laravel_7_b01
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=12345678
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
