--- a/testCreateLarInPhpV7/test-cre-laravel-in-php-v7-b01/.env
+++ b/testCreateLarInPhpV7/test-cre-laravel-in-php-v7-b01/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=LearnLaravelV7FunB01
 APP_ENV=local
 APP_KEY=base64:PFvl4DB3+X1IbSBT0PMftqPvPMWC33OXUJTB/rJ997s=
 APP_DEBUG=true
